# NBezier

./: .clang-format  .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  bezier_benchmark.cpp  bezier_length_benchmark.cpp  bezier_split_benchmark.cpp
benchmark/binomial/: coefficient_benchmark.cpp
benchmark/polynomial/: coefficient_vector_benchmark.cpp
docu/: 01_derive_bezier.tex  02_proof_general_bezier.tex  02_proof_general_weight_matrix.tex  02_proof_general_wight_matrix.tex  04_derive_splitting_bezier.tex  04_proof_splitting_matrix.tex  05_proof_splitting_matrix.tex  main.tex
src/NBezier/: CMakeLists.txt  bezier.h  bezier_length.h  bezier_length_result.h  bezier_length_to_alpha.h  bezier_matrix.h  bezier_points.h  bezier_requirements.h  bezier_split.h  binomial_coefficient.h  curve_matrix.h  defines.h  linear_bezier.h  main.cpp  points.h  polynomial_coefficients.h  polynomial_derivative_factors.h  polynomial_evaluation.h  polynomial_variable.h  split_matrices.h  split_weight_matrix.h  vector.h  weight_matrix.h
src/NBezier/binomial/: coefficient.h  type.h
src/NBezier/math/: pow.h
src/NBezier/polynomial/: coefficient_vector.h  derivative_factors.h  evaluation.h  variable.h  variable_vector.h
test/: CMakeLists.txt  bezier_length_tests.cpp  bezier_length_to_alpha_tests.cpp  bezier_matrix_tests.cpp  bezier_points_tests.cpp  bezier_split_tests.cpp  bezier_test_types.h  bezier_tests.cpp  binomial_coefficient_tests.cpp  curve_matrix_tests.cpp  linear_bezier_tests.cpp  main.cpp  polynomial_coefficients_tests.cpp  polynomial_derivative_factors_tests.cpp  polynomial_evaluation_tests.cpp  polynomial_variable_tests.cpp  split_matrices_tests.cpp  split_weight_matrix_tests.cpp  vector_test.cpp  weight_matrix_tests.cpp
test/binomial/: binomial_test_types.h  coefficient_tests.cpp
test/helper/: cardinalities.h
test/math/: pow_tests.cpp
test/polynomial/: coefficient_vector_tests.cpp  derivative_factors_tests.cpp  evaluation_tests.cpp  polynomial_test_types.h  variable_tests.cpp  variable_vector_tests.cpp
